objects/Tech_Integration__c/Tech_Integration__c.object-meta.xml
<CustomObject>
    <label>Tech Integration</label>
    <nameField>
        <displayFormat>TI-{000}</displayFormat>
        <label>Tech Integration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tech Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>