objects/Tech_Integration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tech Integrations</relationshipLabel>
    <relationshipName>Tech_Integrations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>