objects/Tech_Integration__c/fields/Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Date__c</fullName>
    <description>The date that the TAM reconfirmed that the integration is still active</description>
    <inlineHelpText>This is the date that it was confirmed that this integration is still active</inlineHelpText>
    <label>Confirmation Date</label>
    <type>Date</type>
</CustomField>