objects/Tech_Integration__c/fields/In_Production__c.field-meta.xml
<CustomField>
    <fullName>In_Production__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Production</label>
    <type>Checkbox</type>
</CustomField>