objects/Tech_Integration__c/fields/Integration_Method__c.field-meta.xml
<CustomField>
    <fullName>Integration_Method__c</fullName>
    <label>Integration Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API Gateway</fullName>
            </value>
            <value>
                <fullName>Asset DB/SQL</fullName>
            </value>
            <value>
                <fullName>Asset Report Ingest</fullName>
            </value>
            <value>
                <fullName>Asset REST API</fullName>
            </value>
            <value>
                <fullName>Comply REST API</fullName>
            </value>
            <value>
                <fullName>Connect (All Other Sources)</fullName>
            </value>
            <value>
                <fullName>Connect (Audit)</fullName>
            </value>
            <value>
                <fullName>Connect (Events)</fullName>
            </value>
            <value>
                <fullName>Connect (Reporting)</fullName>
            </value>
            <value>
                <fullName>Connect (Saved Question)</fullName>
            </value>
            <value>
                <fullName>Connect REST API</fullName>
            </value>
            <value>
                <fullName>Custom Sensor/Package</fullName>
            </value>
            <value>
                <fullName>Deploy Gallery</fullName>
            </value>
            <value>
                <fullName>Deploy REST API</fullName>
            </value>
            <value>
                <fullName>Endpoint Identity API</fullName>
            </value>
            <value>
                <fullName>Enforce REST API</fullName>
            </value>
            <value>
                <fullName>Integrity Monitor REST API</fullName>
            </value>
            <value>
                <fullName>Patch REST API</fullName>
            </value>
            <value>
                <fullName>Platform REST API</fullName>
            </value>
            <value>
                <fullName>Stream</fullName>
            </value>
            <value>
                <fullName>Threat Response REST API</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>