objects/Tech_Integration__c/fields/Integration_Product__c.field-meta.xml
<CustomField>
    <fullName>Integration_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ss-1583. - Integration Product</description>
    <inlineHelpText>Please select the Integration Product</inlineHelpText>
    <label>Integration Product</label>
    <referenceTo>Integration_Product__c</referenceTo>
    <relationshipLabel>Tech Integrations</relationshipLabel>
    <relationshipName>Tech_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>