objects/Tech_Integration__c/fields/Is_Integration_Method_Other__c.field-meta.xml
<CustomField>
    <fullName>Is_Integration_Method_Other__c</fullName>
    <formula>INCLUDES(Integration_Method__c,&quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Integration Method = Other</label>
    <type>Checkbox</type>
</CustomField>