objects/Tech_Integration__c/fields/Is_Module_Other__c.field-meta.xml
<CustomField>
    <fullName>Is_Module_Other__c</fullName>
    <formula>INCLUDES(Module__c,&quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Module = Other</label>
    <type>Checkbox</type>
</CustomField>