objects/Tech_Integration__c/fields/Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_By__c</fullName>
    <label>Last Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>