objects/Tech_Integration__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <length>200</length>
    <type>Text</type>
</CustomField>