objects/Tech_Integration__c/recordTypes/Tech_Integration.recordType-meta.xml
<RecordType>
    <fullName>Tech_Integration</fullName>
    <active>true</active>
    <label>Tech Integration</label>
</RecordType>