objects/Tech_Integration__c/validationRules/Prevent_Account_Update_after_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Account_Update_after_Create</fullName>
    <active>true</active>
    <description>SS-2162 https://tanium.atlassian.net/browse/SS-2162</description>
    <errorConditionFormula>AND(
 ISNEW() == FALSE,
 ISCHANGED( Account__c ) 

)</errorConditionFormula>
    <errorMessage>Account cannot be changed after Tech Integration record had been created.</errorMessage>
</ValidationRule>