objects/Tech_Integration__c/listViews/All_Tech_Integrations.listView-meta.xml
<ListView>
    <fullName>All_Tech_Integrations</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>In_Production__c</columns>
    <columns>Module__c</columns>
    <columns>Other_Modules__c</columns>
    <columns>Integration_Method__c</columns>
    <columns>Other_Integration_Methods__c</columns>
    <columns>Integration_Product__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Tech Integrations</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>